add css to inputs and buttons

--- a/src/theme/colors.scss
+++ b/src/theme/colors.scss
@@ -1,6 +1,10 @@
 // app-colors
 
-$green-light-one : #a8cf45;
-$green-light-two : #85a53b;
-$green-dark      : #036e3c;
-$dark            : #000000;
+$green-light-one    : #a8cf45;
+$green-light-two    : #85a53b;
+$green-light-three  : #8aaf2d;
+$green-dark         : #036e3c;
+$dark               : #000000;
+$white              : #ffffff;
+$bg-app             : #b1b1b1;
+$blue-fb            : #3b5998;
