--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -15,6 +15,8 @@
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
 @import '../theme/colors';
+@import '../theme/buttons';
+@import '../theme/forms';
 
 .content-md, .content-ios {
     background-image: url('/assets/imgs/bg-app.png');
@@ -22,3 +24,4 @@
     background-position:center;
     background-size: 100%;
 }
+
