fix assets images

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -19,7 +19,7 @@
 @import '../theme/forms';
 
 .content-md, .content-ios {
-    background-image: url('/assets/imgs/bg-app.png');
+    background-image: url('../assets/imgs/bg-app.png');
     background-repeat:no-repeat;
     background-position:center;
     background-size: 100%;
