--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -23,6 +23,7 @@
     background-repeat:no-repeat;
     background-position:center;
     background-size: 100%;
+    // background-color: $bg-app;
 }
 
 .logo-app {
