--- a/src/theme/colors.scss
+++ b/src/theme/colors.scss
@@ -6,5 +6,8 @@ $green-light-three  : #8aaf2d;
 $green-dark         : #036e3c;
 $dark               : #000000;
 $white              : #ffffff;
-$bg-app             : #b1b1b1;
+
 $blue-fb            : #3b5998;
+
+
+$bg-app             : $green-light-one;
