--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -12,6 +12,7 @@ page-login {
             display: flex;
             align-items: center;
             justify-content: center;
+            color: $white;
         }
     }
 }
