--- a/src/theme/buttons.scss
+++ b/src/theme/buttons.scss
@@ -2,7 +2,7 @@ button.btn {
     height: 40px;
     border-radius: 8px;
     &.btn-primary {
-        background-color: $green-light-two;
+        background-color: $white;
         border:0px solid $green-light-three;
         -webkit-border-radius: 6px;
         -moz-border-radius: 6px;
@@ -10,10 +10,7 @@ button.btn {
         font-size:12px;
         padding: 10px 10px 10px 10px;
         text-decoration:none;
-        font-weight:bold;
-        color: $white;
-        background-color: $green-light-one;
-        background-image: linear-gradient(to bottom, $green-light-one, $green-light-two);
+        color: $dark;
     }
     &.btn-fb {
         background-color: $blue-fb;
