--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,20 @@
 page-home {
-
+    .input-search {
+        border-radius: 8px;
+        .label-search {
+            display: flex;
+            flex: none;
+            margin: 0;
+            ion-icon.icon {
+                font-size: 1.6em;
+            }
+        }
+        .select-search {
+            width: 100%;
+            max-width: 100%;
+            .select-icon {
+                display: none;
+            }
+        }
+    }
 }
