--- a/src/theme/modal.scss
+++ b/src/theme/modal.scss
@@ -1,5 +1,5 @@
 ion-alert {
-    &.alert-ios, &.alert-md {
+    &.alert-ios:not(.select-alert), &.alert-md:not(.select-alert) {
         .alert-wrapper {
             border-radius: 8px;
             .alert-head {
