update css and put location by default

--- a/src/components/map/map.html
+++ b/src/components/map/map.html
@@ -1,4 +1,2 @@
 <!-- Generated template for the MapComponent component -->
-<div id="map" #map>
-    <svg></svg>
-</div>
+<div class="map" #map></div>
