--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -19,12 +19,15 @@
 @import '../theme/forms';
 @import '../theme/modal';
 
-.content-md, .content-ios {
-    // background-image: url('../assets/imgs/bg-app.png');
-    // background-repeat:no-repeat;
-    // background-position:center;
-    // background-size: 100%;
+ion-content {
     background-color: $bg-app;
+    &.content-md, &.content-ios, &.content-wp {
+        // background-image: url('../assets/imgs/bg-app.png');
+        // background-repeat:no-repeat;
+        // background-position:center;
+        // background-size: 100%;
+        background-color: $bg-app;
+    }
 }
 
 .logo-app {
@@ -33,25 +36,38 @@
     height: 8em;
 }
 
-page-register-user {
+page-register-user, page-home {
     ion-header.header {
         .toolbar {
-            .toolbar-background-md, .toolbar-background-ios {
+            .toolbar-background-md, .toolbar-background-ios, .toolbar-background-wp {
                 background: none;
-                border:none;
+                border-bottom: 1px solid $white;
                 box-shadow: none;
+                color: $white;
+            }
+            button {
+                &.menu {
+                    color: $white;
+                }
+            }
+            ion-title {
+                .toolbar-title {
+                    color: $white;
+                    text-transform: uppercase;
+                    padding-left: 0;
+                }
             }
         }
         &::after {
             display: none;
         }
     }
-    ion-content {
-        .fixed-content {
-            margin-top: 0 !important;
-        }
-        .scroll-content {
-            margin-top: 16px !important;
+}
+
+page-home {
+    &._gmaps_cdv_ {
+        ion-header.header {
+            background-color: $bg-app;
         }
     }
 }
