--- a/src/components/map/map.scss
+++ b/src/components/map/map.scss
@@ -1,9 +1,10 @@
 map {
-    margin: 1rem;
-    #map {
+    display: block;
+    width: 100%;
+    height: 100%;
+    .map {
         display: block;
         width: 100%;
-        min-height: 350px;
-        max-height: 700px;
+        height: 100%;
     }
 }
