--- a/src/app/app.html
+++ b/src/app/app.html
@@ -11,4 +11,4 @@
         </ion-list>
     </ion-content>
 </ion-menu>
-<ion-nav [root]="rootPage" #content swipeBackEnabled="false"></ion-nav>
+<ion-nav [root]="rootPage" #content></ion-nav>
