--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -36,9 +36,12 @@ ion-content {
     height: 8em;
 }
 
-page-register-user, page-home {
+page-register-user, page-home, page-result {
     ion-header.header {
         .toolbar {
+            .back-button {
+                color: $white;
+            }
             .toolbar-background-md, .toolbar-background-ios, .toolbar-background-wp {
                 background: none;
                 border-bottom: 1px solid $white;
@@ -64,10 +67,59 @@ page-register-user, page-home {
     }
 }
 
-page-home {
+page-home, page-result {
     &._gmaps_cdv_ {
         ion-header.header {
             background-color: $bg-app;
         }
+    }
+    ion-content {
+        &.content-ios {
+            .scroll-content {
+                margin-top: 64px !important;
+            }
+        }
+    }
+    .search-section {
+        margin-bottom: 0;
+        &.list-ios {
+            ion-item:first-child {
+                border-top: 0px;
+            }
+        }
+        .input-search {
+            background-color: $bg-app;
+            padding: 8px 12px;
+            .item-inner {
+                background-color: $white;
+                padding-left: 12px;
+                padding-right: 12px;
+                border-radius: 8px;
+            }
+            .label-search {
+                display: flex;
+                flex: none;
+                margin: 0;
+                ion-icon.icon {
+                    font-size: 1.6em;
+                    &.icon-ios {
+                        font-size: 1.3em;
+                        color: #999;
+                        font-weight: bold;
+                    }
+                }
+            }
+            .select-search {
+                width: 100%;
+                max-width: 100%;
+                border: none;
+                .select-icon {
+                    display: none;
+                }
+            }
+        }
+    }
+    .map-section {
+        min-height: 350px;
     }
 }
