implement logic in markers

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -53,6 +53,9 @@ page-register-user, page-home, page-result {
                     color: $white;
                 }
             }
+            .toolbar-content {
+                display: flex;
+            }
             ion-title {
                 .toolbar-title {
                     color: $white;
