--- a/src/components/marker-detail/marker-detail.html
+++ b/src/components/marker-detail/marker-detail.html
@@ -1,5 +1,5 @@
 <!-- Generated template for the MarkerDetailComponent component -->
-<div class="bank-detail" *ngIf='!!bankDetail'>
+<div class="bank-detail" *ngIf="!!bankDetail">
     <div class="title">{{ bankDetail.bank?.name }}</div>
     <div class="description">
         <ion-icon class="pin" name="pin"></ion-icon>
