--- a/src/components/map/map.html
+++ b/src/components/map/map.html
@@ -1,2 +1,3 @@
 <!-- Generated template for the MapComponent component -->
 <div class="map" #map></div>
+<marker-detail [bankDetail]="bankDetail"></marker-detail>
