--- a/src/components/marker-detail/marker-detail.scss
+++ b/src/components/marker-detail/marker-detail.scss
@@ -1,6 +1,7 @@
 marker-detail {
     position: absolute;
     bottom: 1em;
+    width: 100%;
     .bank-detail {
         background-color: $white;
         padding: 0.1em 1em;
