--- a/src/theme/colors.scss
+++ b/src/theme/colors.scss
@@ -1,5 +1,5 @@
 // app-colors
-
+$btn-light          : #d1d1e0;
 $green-light-one    : #a8cf45;
 $green-light-two    : #85a53b;
 $green-light-three  : #8aaf2d;
