--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,14 +1,15 @@
 <ion-menu [content]="content">
     <ion-header>
         <ion-toolbar>
-            <ion-title>Menu</ion-title>
+            <ion-title></ion-title>
         </ion-toolbar>
     </ion-header>
     <ion-content>
         <ion-list>
-            <button menuClose ion-item> Home </button>
-            <button menuClose ion-item> Cerrar Sesión</button>
+            <ion-item>
+                    <button menuClose ion-button clear full icon-left color="light" (click)="showAlert()"><ion-icon name="log-out" color="danger"></ion-icon> Cerrar Sesión</button>
+            </ion-item>
         </ion-list>
     </ion-content>
 </ion-menu>
-<ion-nav [root]="rootPage" #content></ion-nav>
+<ion-nav [root]="rootPage" #content swipeBackEnabled="false"></ion-nav>
