implement message and error code in register, create translate provider

--- a/src/pages/register-user/register-user.scss
+++ b/src/pages/register-user/register-user.scss
@@ -1,3 +1,12 @@
 page-register-user {
-
+    .register-user {
+        .form-register {
+            .input-fields {
+                .error {
+                    margin-bottom: 16px;
+                    color: red;
+                }
+            }
+        }
+    }
 }
